# flowday

./: .gitignore
.github/workflows/: build.yml
flowday/: .gitignore  index.html  package-lock.json  package.json
flowday/src-tauri/: Cargo.toml  tauri.conf.json
flowday/src-tauri/icons/: icon.icns
flowday/src-tauri/migrations/: 001_init.sql  002_indexes.sql  003_sort_order.sql  004_push_calendar.sql  005_calendar_cache.sql
flowday/src-tauri/src/: db.rs  lib.rs  main.rs  timer.rs
flowday/src-tauri/src/commands/: blocks.rs  calendar.rs  google.rs  mod.rs  push.rs
flowday/src/components/: BlockCard.tsx  BlockFormModal.tsx  DeleteConfirmDialog.tsx  DropdownPanel.tsx  MenuBar.tsx  QuickActions.tsx  Timeline.tsx
flowday/src/hooks/: useBlocks.ts  useTimer.ts
flowday/src/pages/: Dashboard.tsx  Settings.tsx
flowday/src/types/: index.ts
flowday/src/utils/: api.ts  calendarSync.ts  constants.ts
