[package]
name = "flowday"
version = "0.1.0"
description = "FlowDay - Focus timer and task tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "flowday_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
keyring = { version = "3", features = ["linux-native"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
